<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <EditText
            android:id="@+id/edit_text_email_act_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/edit_text_password_act_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/edit_text_confirm_password_act_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/retype_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_signup_act_signup"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/signup" />

</LinearLayout>